--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "bunx --bun vite preview"
   },
   "dependencies": {
+    "@types/node": "^24.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
